Fix misalignment in filter-search container

--- a/css/basics/base.css
+++ b/css/basics/base.css
@@ -39,10 +39,6 @@ a {
     cursor:pointer;
 }
 
-.main-logo{
-    height:5vh;
-}
-
 .colorPicker{
     background-color: transparent; 
     color:transparent;
