--- a/css/setup/mq.css
+++ b/css/setup/mq.css
@@ -117,12 +117,16 @@
 
 /* medium */
 @media (min-width:1100px) {
+    .main-logo{
+        height:4rem;
+        margin-inline-start: 1em;
+    }
     .main-nav ul {
         gap: 3rem;
     }
 
     .main-nav>ul>li img {
-        height: 6vh;
+        height: 2.7rem;
     }
 
     .meme-container {
@@ -149,6 +153,9 @@
 
 /* large */
 @media (min-width:1400px) {
+    .main-nav>ul>li img {
+        height: 3rem;
+    }
     .meme-container {
         grid-template-columns: minmax(250px, 1fr) minmax(250px, 1fr)minmax(250px, 1fr)minmax(250px, 1fr);
     }
